--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.11",
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
