--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.1.8",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.11",
     "axios": "^0.21.1",
@@ -17,6 +18,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-form": "^8.3.7",
     "styled-components": "^5.3.0",
